[package]
name = "ame-bus"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ame-Build/ame-bus.git"
description = "A NATS tool for JSON messages"


[dependencies]
# runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
tracing = "0.1"

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.37.0"