[workspace]
resolver = "2"
members = [ "ame_bus","ame_bus_macros"]


[workspace.dependencies]
# runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0.89"
tracing = "0.1"

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = { version = "0.38.0", features = ["service"] }