[workspace]
resolver = "2"
members = [ "ame_bus","ame_bus_macros"]

[workspace.dependencies]
# runtime
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3.31" }
async-trait = "0.1"
anyhow = "1.0.89"
tracing = "0.1"

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = { version = "0.40.0", features = ["service"] }
prost = "0.13.5"
prost-types = "0.13.4"
compact_str = {version = "0.9.0", features = ["bytes", "smallvec"]}
smallvec = { version = "1.14.0", features = ["union", "const_generics", "const_new", "write"] }