[package]
name = "ame-bus"
version = "1.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ame-Build/ame-bus.git"
description = "Modern microservices framework based on NATS."
authors = ["Nikaidou Haruki <nharuki@pm.me>"]

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
tokio = { workspace = true}
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-nats = { workspace = true }
ame_bus_macros = "0.1.0"
num_cpus = "1.16.0"

[features]
jetstream = []
service = []
full = ["jetstream", "service"]