[package]
name = "ame-bus"
version = "1.2.1-alpha.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/Ame-Build/ame-bus.git"
description = "Modern microservices framework based on NATS."
authors = ["Nikaidou Haruki <nharuki@pm.me>"]

[package.metadata.docs.rs]
features = ["json", "protobuf"]

[dependencies]
tokio = { workspace = true}
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
prost = {workspace = true, optional = true}
prost-types = {workspace = true, optional = true}
tracing = { workspace = true }
futures = { workspace = true }
bytes = {workspace = true}
async-nats = { workspace = true }
smallvec = {workspace = true}
compact_str = {workspace = true}
ame_bus_macros = "0.3.0-alpha.2"
time = "0.3.41"

[features]
json = ["serde_json", "serde"]
protobuf = ["prost", "prost-types"]