[package]
name = "ame_bus_macros"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "proc-macro for ame-bus"
repository = "https://github.com/Ame-Build/ame-bus"
authors = ["Nikaidou Haruki <nharuki@pm.me>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0"
convert_case = "0.7.1"
quote = "1"
regex = "1.11.1"