[package]
name = "shizuku"
version = "0.0.2-alpha.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/suitsu31-club/shizuku"
homepage = "https://shizuku.netaneko.com/"
description = "Modern microservices framework based on NATS."
authors = ["Nikaidou Haruki <nharuki@pm.me>"]
keywords = ["nats", "microservices"]

[package.metadata.docs.rs]
features = ["json", "protobuf"]

[dependencies]
tokio = { workspace = true}
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
prost = {workspace = true, optional = true}
prost-types = {workspace = true, optional = true}
tracing = { workspace = true }
futures = { workspace = true }
bytes = {workspace = true}
async-nats = { workspace = true }
compact_str = {workspace = true}
shizuku_macros = "0.0.1-alpha.1"
time = "0.3.41"
rand = "0.9"

[features]
json = ["serde_json", "serde"]
protobuf = ["prost", "prost-types"]