[package]
name = "shizuku"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/suitsu31-club/shizuku"
homepage = "https://shizuku.netaneko.com/"
description = "Modern microservices framework based on NATS."
authors = ["Nikaidou Haruki <nharuki@pm.me>"]
keywords = ["nats", "microservices"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = { workspace = true}
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = {workspace = true}
prost-types = {workspace = true}
tracing = { workspace = true }
futures = { workspace = true }
bytes = {workspace = true}
async-nats = { workspace = true }
compact_str = {workspace = true}
shizuku_macros = "0.0.5"
time = "0.3.41"
rand = "0.9"
thiserror = "2.0"
kanau = "0.1.0"
bincode = {version = "2.0", features = ["serde"]}

[features]
json = []
protobuf = []
bincode = []